--- a/admin_flutter_ecommerce_application/pubspec.yaml
+++ b/admin_flutter_ecommerce_application/pubspec.yaml
@@ -27,6 +27,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  firebase_storage: 
+  fluttertoast: ^3.1.3
+  shared_preferences:
+  image_picker: ^0.6.3+1
+  cached_network_image: ^2.0.0
+  intl: ^0.16.1
+  uuid: ^2.0.4
+  firebase_database:
+  cloud_firestore: 
 
 
 # For information on the generic Dart part of this file, see the
