--- a/admin_flutter_ecommerce_application/pubspec.yaml
+++ b/admin_flutter_ecommerce_application/pubspec.yaml
@@ -35,7 +35,9 @@ dev_dependencies:
   intl: ^0.16.1
   uuid: ^2.0.4
   firebase_database:
-  cloud_firestore: 
+  cloud_firestore:
+  flutter_typeahead: ^1.8.0  
+  
 
 
 # For information on the generic Dart part of this file, see the
